--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="home.css" />
+  <link rel="stylesheet" href="css/home.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js"></script>
@@ -27,102 +27,6 @@ body {
   overflow: hidden;
 }
 
-header {  
-  
-background-color: #8ecae6;  
-position: fixed;  
-left: 0;  
-z-index:10;
-right: 0;   
-height: 100px;  
-display: flex;  
-align-items: center;  
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
-	
-}
-
-header * {  
-display: inline;  
-	
-} 
-
-header li {  
-	margin:20px;  
-	
-} 
-
-header li a {  
-  color: black;
-  text-align: center;
-  text-decoration: none;
-  left: 60px; top: 35px;
-  font-size: 40px;
-  font-weight: 400;
-  font-family: Lilita One;
-}  
-
-/*dropdown section and placement*/
-
-header .dropdown {
-  overflow: hidden;
-}
-
-/*dropdown font and text (work)*/
-
-header .dropdown .dropbtn {
-  font-size: relative;  
-  border: none;
-	z-index: 10;
-  outline: none;
-  background-color: inherit;
-  font-family: Gudea;
-  margin: 0;
-}
-
-a:hover, .dropdown:hover .dropbtn {
-    background-color: #219EBC;
-    border-size: 80px 900px;
-    border-radius: 80px 900px;
-}
-
-/*the link text and box*/
-
-.dropdown-content {
-   margin: 0px;
-	padding: 0px;
-	background-color: #FFF1DD;
-display: none;
-  position: absolute;
-  min-width: fit-content;
-min-height: min-content;
-	
-	
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-    color: black;
-  text-align: center;
-  text-decoration: none;
-  font-weight: 400;
-	padding: 12px 16px;
-    margin:0px;
-    display: block;
-    font-family: Gudea;
-  font-size: 18px;
-	
-}
-
-.dropdown-content a:hover {
-    background-color: #FFA800;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    
-}
-
-.dropdown:hover .dropdown-content {
-  display: flex;
-}
 
 	
 </style>  
@@ -152,61 +56,8 @@ min-height: min-content;
 	</ul>
 	</nav>
 </header>  
-  <img class="Rectangle3" style="width: 1154px; height: auto; left: 360px; top: 200px;; position: absolute; border-radius: 72px" src="images/Group21.png" />
-  <div class="Group21" style="width: 1154px; height: auto; left: 360px; top: 200px; position: absolute">
-    <div class="Ellipse2" style="width: 126.41px; height: 115.55px; left: 280.48px; top: 94.08px; position: absolute; transform: rotate(167.21deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse5" style="width: 126.41px; height: 115.55px; left: 401.79px; top: 110.18px; position: absolute; transform: rotate(167.21deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse6" style="width: 132.01px; height: 102.71px; left: 181.49px; top: 175.45px; position: absolute; transform: rotate(-172.06deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse10" style="width: 126.41px; height: 115.55px; left: 461.35px; top: 287.66px; position: absolute; transform: rotate(167.21deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse11" style="width: 126.41px; height: 115.55px; left: 582.66px; top: 303.77px; position: absolute; transform: rotate(167.21deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse12" style="width: 132.01px; height: 102.71px; left: 362.35px; top: 369.04px; position: absolute; transform: rotate(-172.06deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse13" style="width: 73.86px; height: 183.58px; left: 1078.47px; top: 299.50px; position: absolute; transform: rotate(59.49deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse14" style="width: 108.11px; height: 147.14px; left: 122.10px; top: 362.02px; position: absolute; transform: rotate(-154.83deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse15" style="width: 128.53px; height: 110.93px; left: 210.10px; top: 433.03px; position: absolute; transform: rotate(-168.88deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse16" style="width: 108.11px; height: 147.14px; left: 97.84px; top: 291.52px; position: absolute; transform: rotate(-154.83deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse7" style="width: 126.41px; height: 115.55px; left: 362.09px; top: 191.41px; position: absolute; transform: rotate(167.21deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse8" style="width: 126.41px; height: 115.55px; left: 483.40px; top: 207.51px; position: absolute; transform: rotate(167.21deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse9" style="width: 132.01px; height: 102.71px; left: 263.10px; top: 272.78px; position: absolute; transform: rotate(-172.06deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse17" style="width: 126.41px; height: 115.55px; left: 774.96px; top: 318.88px; position: absolute; transform: rotate(167.21deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse18" style="width: 126.41px; height: 115.55px; left: 896.27px; top: 334.98px; position: absolute; transform: rotate(167.21deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse19" style="width: 132.01px; height: 102.71px; left: 675.97px; top: 400.25px; position: absolute; transform: rotate(-172.06deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse20" style="width: 126.41px; height: 115.55px; left: 955.82px; top: 512.47px; position: absolute; transform: rotate(167.21deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse21" style="width: 126.41px; height: 115.55px; left: 1077.13px; top: 528.57px; position: absolute; transform: rotate(167.21deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse22" style="width: 132.01px; height: 102.71px; left: 856.83px; top: 593.84px; position: absolute; transform: rotate(-172.06deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse23" style="width: 73.86px; height: 183.58px; left: 1116.51px; top: 375.94px; position: absolute; transform: rotate(59.49deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse24" style="width: 108.11px; height: 147.14px; left: 616.58px; top: 586.82px; position: absolute; transform: rotate(-154.83deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse25" style="width: 128.53px; height: 110.93px; left: 704.58px; top: 657.83px; position: absolute; transform: rotate(-168.88deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse26" style="width: 108.11px; height: 147.14px; left: 592.32px; top: 516.33px; position: absolute; transform: rotate(-154.83deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse27" style="width: 126.41px; height: 115.55px; left: 856.57px; top: 416.21px; position: absolute; transform: rotate(167.21deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse28" style="width: 126.41px; height: 115.55px; left: 977.88px; top: 432.31px; position: absolute; transform: rotate(167.21deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse29" style="width: 132.01px; height: 102.71px; left: 757.58px; top: 497.58px; position: absolute; transform: rotate(-172.06deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse30" style="width: 126.41px; height: 115.55px; left: 415.43px; top: 373.27px; position: absolute; transform: rotate(167.21deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse31" style="width: 126.41px; height: 115.55px; left: 536.74px; top: 389.37px; position: absolute; transform: rotate(167.21deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse32" style="width: 132.01px; height: 102.71px; left: 316.44px; top: 454.64px; position: absolute; transform: rotate(-172.06deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse33" style="width: 126.41px; height: 115.55px; left: 574.17px; top: 101.68px; position: absolute; transform: rotate(167.21deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse34" style="width: 126.41px; height: 115.55px; left: 717.61px; top: 582.96px; position: absolute; transform: rotate(167.21deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse35" style="width: 132.01px; height: 102.71px; left: 497.31px; top: 648.23px; position: absolute; transform: rotate(-172.06deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse36" style="width: 73.86px; height: 183.58px; left: 756.98px; top: 430.33px; position: absolute; transform: rotate(59.49deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse37" style="width: 108.11px; height: 147.14px; left: 257.06px; top: 641.21px; position: absolute; transform: rotate(-154.83deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse38" style="width: 128.53px; height: 110.93px; left: 345.05px; top: 712.22px; position: absolute; transform: rotate(-168.88deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse39" style="width: 108.11px; height: 147.14px; left: 232.79px; top: 570.71px; position: absolute; transform: rotate(-154.83deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse40" style="width: 126.41px; height: 115.55px; left: 497.04px; top: 470.60px; position: absolute; transform: rotate(167.21deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse41" style="width: 126.41px; height: 115.55px; left: 618.35px; top: 486.70px; position: absolute; transform: rotate(167.21deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse42" style="width: 132.01px; height: 102.71px; left: 398.05px; top: 551.97px; position: absolute; transform: rotate(-172.06deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse43" style="width: 69.34px; height: 186.96px; left: 558.44px; top: 65.19px; position: absolute; transform: rotate(-70.08deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse44" style="width: 69.34px; height: 186.96px; left: 679.75px; top: 81.29px; position: absolute; transform: rotate(-70.08deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse45" style="width: 113.62px; height: 138.88px; left: 514.33px; top: 81.38px; position: absolute; transform: rotate(-21.51deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse46" style="width: 69.34px; height: 186.96px; left: 739.31px; top: 258.78px; position: absolute; transform: rotate(-70.08deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse47" style="width: 69.34px; height: 186.96px; left: 860.62px; top: 274.88px; position: absolute; transform: rotate(-70.08deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse48" style="width: 113.62px; height: 138.88px; left: 695.19px; top: 274.96px; position: absolute; transform: rotate(-21.51deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse49" style="width: 130.40px; height: 106.62px; left: 1067.89px; top: 224.17px; position: absolute; transform: rotate(-170.49deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse50" style="width: 134.11px; height: 97.31px; left: 538.59px; top: 241.28px; position: absolute; transform: rotate(-5.40deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse51" style="width: 119.64px; height: 128.74px; left: 558.44px; top: 331.62px; position: absolute; transform: rotate(-17.54deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse52" style="width: 134.11px; height: 97.31px; left: 514.33px; top: 170.79px; position: absolute; transform: rotate(-5.40deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse53" style="width: 69.34px; height: 186.96px; left: 640.05px; top: 162.52px; position: absolute; transform: rotate(-70.08deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse54" style="width: 69.34px; height: 186.96px; left: 761.36px; top: 178.62px; position: absolute; transform: rotate(-70.08deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-    <div class="Ellipse55" style="width: 113.62px; height: 138.88px; left: 595.94px; top: 178.71px; position: absolute; transform: rotate(-21.51deg); transform-origin: 0 0; background: linear-gradient(180deg, #219EBC 22%, #8ECAE6 54%, #FFF1DD 100%)"></div>
-  </div>
+  <img class="Rectangle3" style="width: 1154px; height: auto; left: 360px; top: 200px;; position: absolute; border-radius: 72px" src="images/Pattern 1.svg" />
+ 
  <div <div class="HelloSoGladYouReHereIfYouAreLookingForJadeRobertsYouVeComeToTheRightPlaceUnlessYouReLookingForASylvesterStalloneImpersonatorThatSALittleAwkwardILikeToThinkOfMyselfAsAJadeOfAllTradesIMACuriousSoulAndAFastLearnerWithMeOnYourTeamWeCanDefinitelyKnockoutLikeRocky" style="width: 631px;z-index: 0;height: 531px;left: 60px;top: 200px ;position: absolute;color: black;font-size: 32px;font-family: Lilita One;font-weight: 400;word-wrap: break-word;">Hello,<br><br>So glad you’re here. If you are looking for Jade Roberts, you’ve come to the right place. Unless you’re looking for a Sylvester Stallone impersonator. That’s a little awkward. <br><br>I like to think of myself as a Jade of all trades, I’m a curious soul and a fast learner. With me on your team, we can definitely knockout like Rocky. </div>
 </body>
 </html>
