--- a/about.html
+++ b/about.html
@@ -12,6 +12,9 @@
 About | Jade Roberts Portfolio 
 </Title>  
 <style>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Gudea:ital,wght@0,400;0,700;1,400&family=Lilita+One&display=swap" rel="stylesheet">
 body {
   /* Define the gradient */
   background-image: linear-gradient(180deg, #8ECAE6 0%, #219EBC 100%);
